...
                    android:layout_height="200dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/comment_hint"
                    android:singleLine="false"
                    app:layout_constraintBottom_toTopOf="@+id/buttonSendComment"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dayNameHeader">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_comment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top"
                        android:imeOptions="actionSend"
                        android:inputType="textLongMessage|textAutoCorrect|textMultiLine|textCapSentences|textImeMultiLine"
                        android:singleLine="false"
...
