<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_userSelector"
        android:orderInCategory="100"
        android:title="@string/navigation_selectUser"
        android:icon="@drawable/ic_account_circle"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_calendar"
        android:orderInCategory="200"
        android:title="@string/navigation_selectDay"
        android:icon="@drawable/ic_calendar_select"
        app:showAsAction="ifRoom"/>

</menu>
