<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_schemaSelector"
        android:checkableBehavior="single">

        <item
                android:id="@+id/nav_calendar"
                android:icon="@drawable/ic_menu_calendar"
                android:title="@string/menu_calendar"/>
        <item
                android:id="@+id/nav_busses"
                android:icon="@drawable/ic_menu_bus"
                android:title="@string/menu_busses"/>

    </group>

    <item android:title="@string/account">
        <menu>
            <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_menu_logout"
                    android:title="@string/menu_logout"/>
        </menu>
    </item>
</menu>
