...
                android:layout_height="wrap_content"
                app:date="03"
                app:month="okt"
                app:selected="true" />

            <be.hogent.kolveniershof.ui.DateButton
                android:id="@+id/dateSelectorPlusOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:date="04"
                app:month="okt"
                app:selected="false" />

...
